--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGO_URL=mongodb+srv://codingofficial441:V6vgK5K6NYMXAKMW@cluster0.oando9m.mong
 CLOUD_NAME=dejqdqc19
 CLOUD_API_KEY=859574943235837
 CLOUD_API_SECRET=5XC3vih-C-QfG4v9V9Jlrwxt0Ow
+
+SECRET_KEY=itismysecretkey
